# cat_hair

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.android  README.md  __init__.py  alembic.ini  arch.md  docker-compose.yml  init.sql  neural.py  pyproject.toml  requirements.txt  settings.gradle.kts
alembic/: env.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
cat-server/core/: __init__.py  config.py
cat-server/domain/: entities.py  interfaces.py
cat-server/services/: image_service.py
cat_server/: __init__.py  main.py  pytest.ini
cat_server/api/: __init__.py  endpoints.py  neural.py  schemas.py
cat_server/core/: __init__.py  config.py  database.py  database_init.py  dependencies.py
cat_server/domain/: __init__.py  dto.py  dtos.py  entities.py  interfaces.py
cat_server/infrastructure/: __init__.py  entities.py  neural_client.py  neutral_client.py  repositories.py
cat_server/infrastructure/ai_model/: dual_model_loader.py
cat_server/infrastructure/models/cat_filter/variables/: variables.index
cat_server/infrastructure/models/main_model/: saved_model_loader.py
cat_server/infrastructure/models/main_model/variables/: variables.data-00000-of-00001  variables.index
cat_server/scripts/: database_init.py
cat_server/scripts/haircuts/: add_haircut.py
cat_server/services/: __init__.py  dtos.py  image_processing_service.py  neural_service.py  recommendation_service.py  user_session_service.py
cat_server/test/: test_database.py
cat_server/tests/: neural.py  result.txt  test_api.py  test_database.py  test_e2e.py  test_repo.py  test_services.py
core/: config.py  database.py  database_init.py
docs/: depencies-installation.md
domain/: __init__.py  dtos.py  entities.py  interfaces.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
infrastructure/: database.py  neutral_client.py  repositories.py
release/: output-metadata.json
release/baselineProfiles/0/: app-release.dm
release/baselineProfiles/1/: app-release.dm
services/: dtos.py  recommendation_service.py  user_session_service.py
src/cat_server/: main.py  neural.py
src/cat_server/api/: endpoints.py  schemas.py
src/cat_server/core/: config.py  database.py  dependencies.py
src/cat_server/domain/: dto.py  interfaces.py
src/cat_server/infrastructure/: __init__.py  entities.py  interfaces.py  repositories.py
src/cat_server/infrastructure/ai_model/: dual_model_loader.py
src/cat_server/infrastructure/models/cat_filter/: metadata.json
src/cat_server/infrastructure/models/cat_filter/variables/: variables.data-00000-of-00001
src/cat_server/infrastructure/models/main_model/: metadata.json
src/cat_server/scripts/: database_init.py
src/cat_server/scripts/haircuts/: add_haircut.py
src/cat_server/services/: image_processing_service.py  neural_service.py  user_session_service.py
test/: test_database.py  test_repo.py
Для Docker Hub/: docker-compose.yml
(+7 files in other folders)
